# xiuxian-tui

./: .gitignore  DESIGN.md  LICENSE  README.md  main.py  pyproject.toml
game/: actions.py  config.py  events.py  save.py  state.py  types.py
game/actions/: __init__.py  _shared.py  auto.py  breakthrough.py  commerce.py  cultivate.py  explore.py  secret_realm.py
tests/: test_game.py
ui/: app.py  screens.py  widgets.py
