[project]
name = "xiuxian-tui"
version = "0.1.0"
description = "终端修仙模拟器 — 仪表盘修仙 TUI 游戏"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.0",
]

[tool.setuptools.packages.find]
include = ["game*", "ui*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "N", "W", "E", "UP", "RUF100"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
